@@ -27,6 +27,11 @@
             <version>19</version>
         </dependency>
         <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>19</version>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.28</version>
@@ -39,4 +44,40 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version> <!-- oder die neueste Version -->
+                <configuration>
+                    <release>19</release> <!-- oder die Java-Version, die Sie verwenden -->
+                    <source>19</source>
+                    <target>19</target>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>0.0.8</version> <!-- oder die neueste Version -->
+                <executions>
+                    <execution>
+                        <id>javafx:run</id>
+                        <phase>none</phase>
+                    </execution>
+                </executions>
+                <configuration>
+                    <mainClass>src/main/java/SEPee/client/model/ChatClient.java</mainClass>
+                    <options>
+                        <option>--module-path</option>
+                        <option>javafx-sdk-19/lib</option>
+                        <option>--add-modules</option>
+                        <option>javafx.controls,javafx.fxml</option>
+                        <!-- Weitere VM-Optionen hier -->
+                    </options>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
